{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "9d948c6a-cf66-42b5-8509-0f5068c62017",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2e17dd9f-c4f2-4951-9c6a-3f57da26cf27",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "9e967e29-53a1-412b-ab4e-ebc70f6c3789",
                    "expectedControlType": "Button",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d4965544-48d7-4fb9-baa3-9d89988260f5",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "d496f987-eb94-4ce1-b730-8d3dc9af504b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c8ef1200-2fac-4e22-9360-0f065ca91537",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "06a6d6ba-d39c-4cec-81a9-0305ee34e784",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "300a4a9f-1e42-4a02-9707-ac96fd6a8995",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "df467767-8165-491e-8353-bf58edf5a56c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8cad40f0-1b9e-47c2-8f37-a965234bc7ef",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "788c87a2-b110-484b-86d3-37cecf0b51e5",
                    "path": "<DualShockGamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}